# Health-Insurance-Claims-Processing-System

./: .dockerignore  .env.example  .gitignore  README.md  pytest.ini
assignment/: policy_terms.json
backend/: .env.example  Dockerfile  README.md  __init__.py  logging_config.py  main.py  pyproject.toml  requirements.txt
backend/agents/: decision.py  entity.py  gating.py  orchestrator.py  reconciler.py  vision_reader.py
backend/ai_platform/: __init__.py  agent.py  config.py  errors.py  llm.py  metrics.py  prompts.py  schemas.py
backend/api/: dtos.py  routes.py  test_suite_utils.py
backend/database/: __init__.py  connection.py  models.py  seed.py
backend/models/: __init__.py  claim.py  decision.py  extraction.py  member.py  policy.py
backend/policy/: __init__.py  engine.py  loader.py
backend/providers/: __init__.py  base.py  stub.py
backend/reference_purpose/llm/: __init__.py  circuit_breaker.py  config.py  dto.py  exceptions.py  llm.py  streaming.py
backend/scripts/: __init__.py  check_llm_hi.py  run_eval_suite.py
backend/services/: __init__.py  claim_api_service.py  document_preprocessor.py
backend/storage/: __init__.py  local.py
backend/tasks/: __init__.py  ingestion.py
backend/tests/: conftest.py  test_ai_platform.py  test_api_services.py  test_async_stages_and_ingestion.py  test_policy_engine.py  test_service_and_storage_helpers.py  test_workflow_logic.py
backend/tracing/: __init__.py  decorator.py  span.py  store.py
backend/workflow/: __init__.py  decision.py  entity.py  gating.py  orchestrator.py  reconciler.py  vision_reader.py
(+53 files in other folders)
